--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx watch src/server.ts"
+    "dev": "tsx watch --env-file=.env src/server.ts"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +18,8 @@
   "dependencies": {
     "@fastify/multipart": "^8.0.0",
     "@prisma/client": "5.3.1",
-    "fastify": "^4.23.2"
+    "fastify": "^4.23.2",
+    "openai": "^4.11.1",
+    "zod": "^3.22.4"
   }
 }
